--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@avalabs/avalanchejs",
+  "name": "@bitgo/avalabs-avalanchejs",
   "version": "4.0.5",
   "description": "Avalanche Platform JS Library",
   "main": "dist/index.cjs",
